# eventup

./: README.md  docker-compose.yaml  justfile
docker/: Dockerfile  Dockerfile.frontend  Dockerfile.migrator
docker/clickhouse/cluster_2s_2r/: docker-compose.yaml
docker/haproxy/: haproxy.cfg  server.pem
docs/: appointments.yaml  auth.yaml  index.html  meta.json  users.yaml
services/: Cargo.toml
services/appointments/: Cargo.toml  README.md
services/appointments/migrations/: 20231118201331_appointments.sql  20231130184955_demo_service.sql
services/appointments/src/: app_state.rs  config.rs  external_client.rs  lib.rs  main.rs
services/appointments/src/handlers/: errors.rs  get_appointments.rs  health.rs  mod.rs  router.rs
services/appointments/src/handlers/appointments/: cancel_appointment.rs  delete_appointment.rs  get_appointments.rs  get_free_slots_for_day.rs  mod.rs  post_appointment.rs  serve_appointment.rs
services/appointments/src/handlers/schedules/: get_schedules.rs  mod.rs  post_schedule.rs
services/appointments/src/handlers/services/: delete_service.rs  get_service.rs  get_services.rs  mod.rs  post_service.rs  put_service.rs
services/appointments/src/repository/: error.rs  mod.rs  postgres.rs
services/appointments/src/types/: appointments.rs  mod.rs  schedules.rs  services.rs
services/appointments/tests/: test_services.rs  utils.rs
services/appointments/tests/fixtures/: appointments.sql  schedules.sql  services.sql
services/auth/: index.py
services/auth/migrations/: 20231031191151_auth.sql  20231031192424_staff_users.sql
services/common/auth_extractor/: Cargo.toml
services/common/auth_extractor/src/: authorization_client.rs  lib.rs  mock.rs
services/common/postgres_fixtures/: Cargo.toml
services/common/postgres_fixtures/src/: lib.rs
services/common/types/: Cargo.toml
services/common/types/src/: lib.rs
services/company/migrations/: 20231118203915_companies.sql  20231118204108_employees.sql
services/eventup-frontend/: package-lock.json  package.json
services/eventup-frontend/src/: App.css  App.js  index.js  setupProxy.js
services/eventup-frontend/src/components/: AdminDashboard.js  AppointmentsList.js  EmployeeDashboard.js  EmployeeManagement.js  LandingPage.js  LoginPage.js  Logout.js  NavigationMenu.js  Protected.js  RegistrationPage.js  ServiceList.js  ServiceListBackup.js  UserDashboard.js
services/eventup-frontend/src/hooks/: AuthContext.js
services/frontend/: ReservationTable.html  ReservationTable.jsx
services/users/: Cargo.toml
services/users/migrations/: 20231031191151_auth.sql  20231031192424_staff_users.sql  20231129231508_demo_users.sql
services/users/src/: app_state.rs  config.rs  lib.rs  main.rs
services/users/src/handlers/: access_control.rs  delete_user.rs  errors.rs  get_employees.rs  get_user.rs  internal_get_employees.rs  login.rs  mod.rs  post_user.rs  put_user.rs  router.rs
services/users/src/middlewares/: auth.rs
services/users/src/repository/: error.rs  mod.rs  postgres.rs
services/users/src/types/: jwt.rs  users.rs
services/users/tests/: private_users.rs  test_users.rs  utils.rs
services/users/tests/fixtures/: users.sql
