[workspace]
members = [
  "company",
  "appointments",
  "users",
]
resolver = "2"

[workspace.dependencies]
axum = "0.7.1"
tokio = "1.34.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.6.1" 
anyhow = "1.0.75" 
serde = "1.0.193"
sqlx = { version = "0.7.3" }
thiserror = { version = "1.0.50" }
