[package]
name = "appointments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { workspace = true, features = ["tracing", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
common_types = { package = "types", path = "../common/types" }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.108"
uuid = { workspace = true, features = ["serde", "v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
thiserror = { workspace = true }
tower-http = { version = "0.5.0", features = ["trace"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
serde_with = { version = "3.4.0", features = ["chrono", "macros"] }
validator = { workspace = true, features = ["derive", "phone"] }

[dependencies.auth_extractor]
path = "../common/auth_extractor"


[lib]
name = "lib"
path = "src/lib.rs"

