[package]
name = "appointments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.74"
axum = { workspace = true, features = ["tracing", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
common_types = { package = "types", path = "../common/types" }
auth_extractor = { package = "auth_extractor", path = "../common/auth_extractor"}
uuid = { workspace = true, features = ["serde", "v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
thiserror = { workspace = true }
tower-http = { version = "0.5.0", features = ["trace"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "3.4.0", features = ["chrono", "macros"] }
validator = { workspace = true, features = ["derive", "phone"] }

[dev-dependencies]
auth_extractor = { package = "auth_extractor", path = "../common/auth_extractor", features = ["test-utils"]}
http-body-util = "0.1.0"
mime = "0.3.17"
pretty_assertions = "1.4.0"
tower = "0.4.13"



[lib]
name = "appointments_lib"
path = "src/lib.rs"

