[package]
name = "users"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["tracing", "macros"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "registry"] }
uuid = { workspace = true, features = ["serde", "v4"] }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "uuid", "macros"] }
url = "2.5.0"
config = "0.13.4"
async-trait = "0.1.74"
bcrypt = "0.15.0"
rand = "0.8.5"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = { workspace = true }
validator = { workspace = true, features = ["derive", "phone"] }
serde_json = "1.0.108"
jsonwebtoken = "9.1.0"
tower-http = { version = "0.5.0", features = ["trace"] }

[dependencies.common_types]
package = "types"
path = "../common/types"

[dev-dependencies]
http-body-util = "0.1.0"
mime = "0.3.17"
pretty_assertions = "1.4.0"
tower = "0.4.13"

[dev-dependencies.auth_extractor]
path = "../common/auth_extractor"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "users"
path = "src/main.rs"
