[package]
name = "auth_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true, features = ["tracing", "macros"] }
tracing = { workspace = true }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
common_types = { package = "types", path = "../types" }
