[package]
name = "auth_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
test-utils = ["httpmock", "serde_json"]

[dependencies]
axum = { workspace = true, features = ["tracing", "macros"] }
tracing = { workspace = true }
reqwest = { version = "0.11.22", default-features = false, features = ["json"] }
common_types = { package = "types", path = "../types" }
httpmock = { version = "0.6", optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
httpmock = { version = "0.6" }
uuid = { workspace = true, features = ["serde", "v4"] }
tokio = { workspace = true, features = ["macros"] }
tower = "0.4.13"
